# mycelium

./: .commitlintrc.yml  .editorconfig  .gitignore  .release-notes.md  AGENTS.md  CHANGELOG.md  CHARTER.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DAY-0.md  GITFLOW.md  GOVERNANCE.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  SPONSORS.md  SUPPORT.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: CODEOWNERS  FUNDING.yml  (+2 more)
bindings/python/: README.md  pyproject.toml
bindings/python/mycelium_rcig/: __init__.py  _client.py  _resolve.py  _run.py
bindings/python/tests/: test_client.py  test_integration.py  test_resolve.py  test_run.py
crates/mycelium-cli/: Cargo.toml  build.rs
crates/mycelium-cli/packs/c/: pack.toml  queries.scm
crates/mycelium-cli/packs/cpp/: pack.toml  queries.scm
crates/mycelium-cli/packs/go/: queries.scm
crates/mycelium-cli/packs/java/: queries.scm
crates/mycelium-cli/packs/javascript/: queries.scm
crates/mycelium-cli/packs/ruby/: queries.scm
crates/mycelium-cli/packs/rust/: queries.scm
crates/mycelium-cli/packs/typescript/: queries.scm
crates/mycelium-cli/src/: index.rs  main.rs  queries.rs  query.rs  symbol.rs  watch.rs
crates/mycelium-cli/tests/: cli_basic_queries.rs  cli_basic_queries_batch2.rs  cli_batch10_misc.rs  cli_batch_ops.rs  cli_call_graph.rs  cli_centrality.rs  cli_context_budget.rs  cli_graph_structure.rs  cli_import_graph.rs  cli_inheritance.rs  cli_query.rs  cli_reachability.rs  cli_token_stats.rs  mcp_stdout_purity.rs
crates/mycelium-core/: Cargo.toml  README.md
crates/mycelium-core/benches/: heavy_graph.rs  memory_rss.rs  redb_incremental_persistence.rs  synapse_traversal.rs  trunk_lookup.rs
crates/mycelium-core/packs/javascript/: pack.toml  queries.scm
crates/mycelium-core/packs/python/: pack.toml  queries.scm
crates/mycelium-core/packs/rust/: queries.scm
crates/mycelium-core/packs/typescript/: queries.scm
crates/mycelium-core/src/: budget.rs  classify.rs  constraints.rs  cortex.rs  error.rs  health.rs  lib.rs  queries.rs  test_gap.rs  types.rs  verdict.rs
crates/mycelium-core/src/budget/: tests.rs  tree.rs
crates/mycelium-core/src/context/: mod.rs  ranking.rs  ranking_tests.rs  tests.rs
crates/mycelium-core/src/extractor/: mod.rs  tests.rs
crates/mycelium-core/src/resolver/: mod.rs  receiver.rs
crates/mycelium-core/src/store/: backend.rs  in_memory.rs  journal.rs  memory_budget.rs  mod.rs  redb_backend.rs  redb_codec.rs  redb_keys.rs  redb_tags.rs  tests.rs
crates/mycelium-core/src/synapse/: mod.rs  tests.rs
crates/mycelium-core/src/trunk/: mod.rs  path.rs  tests.rs
crates/mycelium-core/src/watch/: mod.rs  tests.rs
crates/mycelium-core/tests/: e2e_dogfood.rs  equivalence.rs  redb_backend.rs  redb_memory_ceiling.rs  redb_replace_file.rs  redb_sla.rs  sla_heavy_graph.rs  sla_memory_curve.rs  sla_trunk.rs  storage_backend.rs  store_load_format.rs
crates/mycelium-hyphae/: Cargo.toml
crates/mycelium-hyphae/src/: ast.rs  evaluator.rs  lexer.rs  lib.rs  parser.rs
crates/mycelium-hyphae/src/snapshots/: mycelium_hyphae__parser__snapshot_tests__snap_child.snap  mycelium_hyphae__parser__snapshot_tests__snap_child_spaces.snap  mycelium_hyphae__parser__snapshot_tests__snap_comma_list.snap  mycelium_hyphae__parser__snapshot_tests__snap_complex_chain.snap  mycelium_hyphae__parser__snapshot_tests__snap_descendant.snap  mycelium_hyphae__parser__snapshot_tests__snap_empty_err.snap  mycelium_hyphae__parser__snapshot_tests__snap_hyphenated_kind.snap  mycelium_hyphae__parser__snapshot_tests__snap_hyphenated_name.snap  mycelium_hyphae__parser__snapshot_tests__snap_imports.snap  mycelium_hyphae__parser__snapshot_tests__snap_invalid_char_err.snap  mycelium_hyphae__parser__snapshot_tests__snap_kind_descendant_name.snap  mycelium_hyphae__parser__snapshot_tests__snap_kind_selector.snap  mycelium_hyphae__parser__snapshot_tests__snap_multi_pseudo.snap  mycelium_hyphae__parser__snapshot_tests__snap_name_selector.snap  mycelium_hyphae__parser__snapshot_tests__snap_nested_pseudo.snap  mycelium_hyphae__parser__snapshot_tests__snap_no_space_comma.snap  mycelium_hyphae__parser__snapshot_tests__snap_pseudo_no_arg.snap  mycelium_hyphae__parser__snapshot_tests__snap_pseudo_with_arg.snap  mycelium_hyphae__parser__snapshot_tests__snap_sibling.snap  mycelium_hyphae__parser__snapshot_tests__snap_three_list.snap  mycelium_hyphae__parser__snapshot_tests__snap_unclosed_paren_err.snap  mycelium_hyphae__parser__snapshot_tests__snap_universal.snap  mycelium_hyphae__parser__snapshot_tests__snap_universal_pseudo.snap
crates/mycelium-hyphae/tests/: documented_examples_parse.rs  jquery_selectors.rs
crates/mycelium-mcp/: Cargo.toml  README.md
crates/mycelium-mcp/benches/: formatter.rs
crates/mycelium-mcp/packs/cpp/: queries.scm
crates/mycelium-mcp/packs/csharp/: pack.toml  queries.scm
crates/mycelium-mcp/packs/go/: pack.toml  queries.scm
crates/mycelium-mcp/packs/java/: pack.toml  queries.scm
crates/mycelium-mcp/packs/javascript/: queries.scm
crates/mycelium-mcp/packs/python/: queries.scm
crates/mycelium-mcp/packs/ruby/: queries.scm
crates/mycelium-mcp/packs/rust/: pack.toml  queries.scm
crates/mycelium-mcp/packs/typescript/: pack.toml
crates/mycelium-mcp/phantom/file.rs>symbol/.mycelium/: index.rmp
crates/mycelium-mcp/src/: error.rs  formatter.rs  lib.rs  push.rs  query_delta.rs  query_eval.rs  requests.rs  subscription.rs  tests.rs  token_bench.rs
crates/mycelium-mcp/src/subscription/: tests.rs
crates/mycelium-mcp/tests/: contract.rs  contract_subscription.rs  token_corpus.rs
crates/mycelium-mcp/tests/corpus/: REPORT.md  callee_tree.json  caller_tree.json  context.json  importers_tree.json  query.json  search_symbol.json  subclasses_tree.json  symbol_info.json
crates/mycelium-pack/: Cargo.toml
crates/mycelium-pack/src/: lib.rs
spikes/key-encoding/: Cargo.toml
spikes/key-encoding/src/: lib.rs  main.rs
spikes/redb-perf/: Cargo.toml
spikes/redb-perf/src/: cold_reader.rs  gen_db.rs  main.rs
(+284 files in other folders)
