[workspace]
resolver = "2"
members = [
    "crates/mycelium-core",
    "crates/mycelium-hyphae",
    "crates/mycelium-pack",
    "crates/mycelium-cli",
    "crates/mycelium-mcp",
]

[workspace.package]
version       = "0.0.1"
edition       = "2024"
rust-version  = "1.85"
license       = "MIT"
authors       = ["aimasteracc and the Mycelium contributors"]
repository    = "https://github.com/aimasteracc/mycelium"
homepage      = "https://github.com/aimasteracc/mycelium"
documentation = "https://docs.rs/mycelium-core"
keywords      = ["code-intelligence", "tree-sitter", "graph", "mcp", "ai"]
categories    = ["development-tools", "parser-implementations"]
readme        = "README.md"

[workspace.lints.rust]
unsafe_code         = { level = "deny",  priority = 1 }
missing_docs        = { level = "warn",  priority = 1 }
unreachable_pub     = { level = "warn",  priority = 1 }
rust_2018_idioms    = { level = "warn",  priority = -1 }

[workspace.lints.clippy]
all                  = { level = "deny", priority = -1 }
pedantic             = { level = "warn", priority = -1 }
nursery              = { level = "warn", priority = -1 }
cargo                = { level = "warn", priority = -1 }
module_name_repetitions  = "allow"
missing_errors_doc       = "warn"
missing_panics_doc       = "warn"
# notify pulls in bitflags 1.x alongside our 2.x — unavoidable transitive dep.
multiple_crate_versions  = "allow"

[workspace.dependencies]
# Core
tree-sitter             = "0.25"
tree-sitter-javascript  = "0.25"
tree-sitter-python      = "0.25"
tree-sitter-typescript  = "0.23"
tree-sitter-rust        = "0.24"
salsa              = "0.18"
arrow              = "53"
hashbrown          = { version = "0.14", features = ["serde"] }
smol_str           = "0.3"

# Async
tokio              = { version = "1", features = ["macros", "rt-multi-thread", "sync", "fs", "io-util", "signal"] }

# Serialization
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
rmp-serde          = "1"
toml               = "0.8"

# Errors
thiserror          = "2"
anyhow             = "1"

# Tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI
clap               = { version = "4", features = ["derive", "env"] }
walkdir            = "2"

# MCP
rmcp               = { version = "1.7", features = ["server", "transport-io"] }
schemars           = "1"

# File watching
notify             = { version = "6", features = ["macos_kqueue"] }

# Testing
insta              = { version = "1", features = ["yaml", "json"] }
proptest           = "1"
criterion          = { version = "0.5", features = ["html_reports"] }
tempfile           = "3"

# Hashing / IDs
blake3             = "1"
uuid               = { version = "1", features = ["v4", "serde"] }

# Internal crates
mycelium-core      = { path = "crates/mycelium-core", version = "0.0.1" }
mycelium-hyphae    = { path = "crates/mycelium-hyphae", version = "0.0.1" }
mycelium-pack      = { path = "crates/mycelium-pack", version = "0.0.1" }

[profile.release]
lto           = "fat"
codegen-units = 1
opt-level     = 3
panic         = "abort"
strip         = "symbols"

[profile.bench]
inherits = "release"
debug    = true

[profile.dev]
opt-level = 0
debug     = 2
