[workspace]
resolver = "2"
members = [
    "crates/mycelium-core",
    "crates/mycelium-hyphae",
    "crates/mycelium-pack",
    "crates/mycelium-cli",
    "crates/mycelium-mcp",
]

[workspace.package]
version       = "0.1.14"
edition       = "2024"
rust-version  = "1.85"
license       = "MIT"
authors       = ["aimasteracc and the Mycelium contributors"]
repository    = "https://github.com/aimasteracc/mycelium"
homepage      = "https://github.com/aimasteracc/mycelium"
documentation = "https://docs.rs/mycelium-core"
keywords      = ["code-intelligence", "tree-sitter", "graph", "mcp", "ai"]
categories    = ["development-tools", "parser-implementations"]
readme        = "README.md"

[workspace.lints.rust]
unsafe_code         = { level = "deny",  priority = 1 }
missing_docs        = { level = "warn",  priority = 1 }
unreachable_pub     = { level = "warn",  priority = 1 }
rust_2018_idioms    = { level = "warn",  priority = -1 }

[workspace.lints.clippy]
all                  = { level = "deny", priority = -1 }
pedantic             = { level = "warn", priority = -1 }
nursery              = { level = "warn", priority = -1 }
cargo                = { level = "warn", priority = -1 }
module_name_repetitions  = "allow"
missing_errors_doc       = "warn"
missing_panics_doc       = "warn"
# notify pulls in bitflags 1.x alongside our 2.x — unavoidable transitive dep.
multiple_crate_versions  = "allow"

[workspace.dependencies]
# Core
tree-sitter             = "0.26"
tree-sitter-javascript  = "0.25"
tree-sitter-python      = "0.25"
tree-sitter-typescript  = "0.23"
tree-sitter-rust        = "0.24"
tree-sitter-go          = "0.25"
tree-sitter-java        = "0.23"
tree-sitter-c           = "0.24"
tree-sitter-ruby        = "0.23"
tree-sitter-cpp         = "0.23"
tree-sitter-c-sharp     = "0.23"
salsa              = "0.26"
arrow              = "53"
hashbrown          = { version = "0.17", features = ["serde"] }
smol_str           = { version = "0.3", features = ["serde"] }

# Async
tokio              = { version = "1", features = ["macros", "rt-multi-thread", "sync", "fs", "io-util", "signal"] }

# Serialization
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
rmp-serde          = "1"
toml               = "1.1"

# Errors
thiserror          = "2"
anyhow             = "1"

# System
libc               = "0.2"

# Tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI
clap               = { version = "4", features = ["derive", "env"] }
walkdir            = "2"
ignore             = "0.4"

# MCP
rmcp               = { version = "1.7", features = ["server", "transport-io"] }
schemars           = "1"

# File watching
notify             = { version = "8", features = ["macos_kqueue"] }

# Testing
insta              = { version = "1", features = ["yaml", "json"] }
proptest           = "1"
criterion          = { version = "0.8", features = ["html_reports"] }
tempfile           = "3"

# Storage backend
redb               = "4"

# Hashing / IDs
blake3             = "1"
uuid               = { version = "1", features = ["v4", "serde"] }

# Internal crates
# Published on crates.io under `mycelium-rcig-*` namespace (mycelium-{core,cli} are
# taken by unrelated projects). Dep-name stays `mycelium-X` so source `use mycelium_X::*`
# is unchanged; `package = "..."` redirects to the published name.
mycelium-core      = { path = "crates/mycelium-core",   version = "0.1.10", package = "mycelium-rcig-core" }
mycelium-hyphae    = { path = "crates/mycelium-hyphae", version = "0.1.10", package = "mycelium-rcig-hyphae" }
mycelium-pack      = { path = "crates/mycelium-pack",   version = "0.1.10", package = "mycelium-rcig-pack" }

[profile.release]
lto           = "fat"
codegen-units = 1
opt-level     = 3
panic         = "abort"
strip         = "symbols"

[profile.bench]
inherits = "release"
debug    = true

[profile.dev]
opt-level = 0
debug     = 2
