[package]
name          = "mycelium-rcig-cli"
description   = "The `mycelium` command-line tool."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
readme        = "../mycelium-core/README.md"
keywords      = ["code-intelligence", "cli", "graph", "tree-sitter", "ai"]
categories    = ["development-tools", "command-line-utilities"]

[[bin]]
name = "mycelium"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
mycelium-core      = { workspace = true }
mycelium-hyphae    = { workspace = true }
mycelium-pack      = { workspace = true }
mycelium-mcp       = { path = "../mycelium-mcp", version = "0.1.14", package = "mycelium-rcig-mcp" }
tree-sitter             = { workspace = true }
tree-sitter-javascript  = { workspace = true }
tree-sitter-python      = { workspace = true }
tree-sitter-typescript  = { workspace = true }
tree-sitter-rust        = { workspace = true }
tree-sitter-go          = { workspace = true }
tree-sitter-java        = { workspace = true }
tree-sitter-c           = { workspace = true }
tree-sitter-ruby        = { workspace = true }
tree-sitter-cpp         = { workspace = true }
tree-sitter-c-sharp     = { workspace = true }
clap               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir            = { workspace = true }
ignore             = { workspace = true }
tokio              = { workspace = true }
serde_json         = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
