[package]
name          = "mycelium-rcig-core"
description   = "The reactive code intelligence graph engine — Trunk (containment) + Synapse (cross-edges) + Cortex (reactivity)."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = ["code-intelligence", "tree-sitter", "graph", "ai", "mcp"]
categories    = ["development-tools", "parser-implementations"]
readme        = "README.md"

[lib]
name = "mycelium_core"

[features]
default = []
redb-backend = ["dep:redb"]

[lints]
workspace = true

[dependencies]
base64 = "0.22"
serde_json = "1"
anyhow        = { workspace = true }
redb          = { workspace = true, optional = true }
blake3        = { workspace = true }
hashbrown     = { workspace = true }
mycelium-pack = { workspace = true }
rmp-serde     = { workspace = true }
salsa                   = { workspace = true }
serde         = { workspace = true }
smol_str      = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
tree-sitter   = { workspace = true }
tree-sitter-javascript  = { workspace = true }
tree-sitter-python      = { workspace = true }
tree-sitter-typescript  = { workspace = true }
tree-sitter-rust        = { workspace = true }
tree-sitter-go          = { workspace = true }
tree-sitter-java        = { workspace = true }

[dev-dependencies]
criterion               = { workspace = true }
insta                   = { workspace = true }
proptest                = { workspace = true }
tempfile                = { workspace = true }

[[bench]]
name    = "trunk_lookup"
harness = false
required-features = []

[[bench]]
name    = "synapse_traversal"
harness = false
required-features = []

[[bench]]
name    = "heavy_graph"
harness = false
required-features = []

[[bench]]
name    = "redb_incremental_persistence"
harness = false
required-features = ["redb-backend"]
