[package]
name          = "mycelium-rcig-core"
description   = "The reactive code intelligence graph engine — Trunk (containment) + Synapse (cross-edges) + Cortex (reactivity)."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = ["code-intelligence", "tree-sitter", "graph", "ai", "mcp"]
categories    = ["development-tools", "parser-implementations"]
readme        = "README.md"

[lib]
name = "mycelium_core"

[features]
# redb is the default storage backend (RFC-0100 Phase 3 flip, 2026-06-02).
# Opt out with --no-default-features for the legacy in-memory snapshot path.
default = ["redb-backend"]
memory-bound = ["dep:libc"]
redb-backend = ["dep:redb"]

[lints]
workspace = true

[dependencies]
base64 = "0.22"
serde_json = "1"
anyhow        = { workspace = true }
libc          = { workspace = true, optional = true }
redb          = { workspace = true, optional = true }
blake3        = { workspace = true }
hashbrown     = { workspace = true }
mycelium-pack = { workspace = true }
rmp-serde     = { workspace = true }
salsa                   = { workspace = true }
serde         = { workspace = true }
smol_str      = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
tree-sitter   = { workspace = true }
tree-sitter-javascript  = { workspace = true }
tree-sitter-python      = { workspace = true }
tree-sitter-typescript  = { workspace = true }
tree-sitter-rust        = { workspace = true }
tree-sitter-go          = { workspace = true }
tree-sitter-java        = { workspace = true }

# Watch engine (RFC-0105): notify + ignore + tokio (limited features) are needed
# in core so the WatchEngine is surface-agnostic and CLI/MCP share one
# reactive-loop implementation. Tokio features are kept minimal (sync/time/rt
# only — no rt-multi-thread, no fs/io-util) so library users pay only for what
# the watch engine itself runs on.
ignore        = { workspace = true }
notify        = { workspace = true }
# Core needs `time` for the WatchEngine debounce; workspace tokio doesn't
# enable it by default. Library users transitively get only this minimal
# set — no rt-multi-thread, no fs/io-util.
tokio         = { workspace = true, features = ["time"] }

[dev-dependencies]
criterion               = { workspace = true }
# Grammars used ONLY by pack-correctness tests (not embedded by cortex, which
# compiles in just the 5 Tier-1 langs). Test-only so the core lib stays lean.
tree-sitter-c-sharp     = { workspace = true }
tree-sitter-cpp         = { workspace = true }
insta                   = { workspace = true }
proptest                = { workspace = true }
tempfile                = { workspace = true }
tokio                   = { workspace = true }

[[bench]]
name    = "trunk_lookup"
harness = false
required-features = []

[[bench]]
name    = "synapse_traversal"
harness = false
required-features = []

[[bench]]
name    = "heavy_graph"
harness = false
required-features = []

[[bench]]
name    = "redb_incremental_persistence"
harness = false
required-features = ["redb-backend"]

[[bench]]
name    = "memory_rss"
harness = false
required-features = ["memory-bound"]
