[package]
name          = "mycelium-hyphae"
description   = "Hyphae — the CSS-selector-inspired query language for Mycelium. RFC-0003 (forthcoming)."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
readme        = "../mycelium-core/README.md"
keywords      = ["code-intelligence", "query", "graph", "tree-sitter", "ai"]
categories    = ["development-tools", "parser-implementations"]

[lints]
workspace = true

[dependencies]
mycelium-core = { workspace = true }
thiserror     = { workspace = true }
