[package]
name          = "mycelium-rcig-mcp"
description   = "Model Context Protocol server for Mycelium. Powers the AI agent surface."
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
readme        = "../mycelium-core/README.md"
keywords      = ["mcp", "code-intelligence", "ai", "graph", "tree-sitter"]
categories    = ["development-tools", "api-bindings"]

[lib]
name = "mycelium_mcp"

[features]
# redb is the default storage backend (RFC-0100 Phase 3 flip, 2026-06-02).
default = ["redb-backend"]
redb-backend = ["mycelium-core/redb-backend"]
# tiktoken enables BpeTokenCounter (cl100k_base BPE) — the figure-of-record
# tokenizer for Charter §2 token-efficiency SLA (RFC-0120 Phase 1b).
tiktoken = ["dep:tiktoken-rs"]

[lints]
workspace = true

[dependencies]
blake3                  = { workspace = true }
mycelium-core           = { workspace = true }
mycelium-hyphae         = { workspace = true }
rmcp                    = { workspace = true }
schemars                = { workspace = true }
serde                   = { workspace = true }
# preserve_order: RFC-0094 formatter emits keys in source order so
# tree-shaped responses stay human-skimmable (e.g. `root` / `depth` /
# `nodes` for callee_tree). serde_json's default BTreeMap backing
# would alphabetise them.
serde_json              = { workspace = true, features = ["preserve_order"] }
tokio                   = { workspace = true }
tracing                 = { workspace = true }
thiserror               = { workspace = true }
anyhow                  = { workspace = true }
walkdir                 = { workspace = true }
tree-sitter             = { workspace = true }
tree-sitter-javascript  = { workspace = true }
tree-sitter-python      = { workspace = true }
tree-sitter-typescript  = { workspace = true }
tree-sitter-rust        = { workspace = true }
tree-sitter-go          = { workspace = true }
tree-sitter-java        = { workspace = true }
tree-sitter-c           = { workspace = true }
tree-sitter-ruby        = { workspace = true }
tree-sitter-cpp         = { workspace = true }
tree-sitter-c-sharp     = { workspace = true }
notify                  = { workspace = true }
ignore                  = { workspace = true }
rmp-serde               = { workspace = true }
hex                     = "0.4"
regex                   = "1"
uuid                    = { workspace = true }
globset                 = { workspace = true }
tiktoken-rs             = { workspace = true, optional = true }

[dev-dependencies]
tempfile  = { workspace = true }
# Contract tests (tests/contract.rs) require the rmcp client feature to
# spin up an in-process server+client pair via tokio::io::duplex.
rmcp      = { workspace = true, features = ["client"] }
anyhow    = { workspace = true }
criterion = { workspace = true }

[[bench]]
name    = "formatter"
harness = false
